# Practice_cpp

./: .gitigrone  CMakeLists.txt  README.md  main_client.cpp  main_server.cpp
client/: a.out  client.cpp  client.h  client_func.cpp  main_client.cpp
client/coding/: task.cpp
client/unix/: client.cpp  client.h
client/windows/: client.cpp  client_func.cpp
client_dir/: client.cpp  client.h  client_func.cpp
client_dir/coding/: task.cpp
for_unix/: client.cpp  server.cpp
for_windows/: client.cpp  client.h  client_func.cpp  server.cpp  server.h  server_func.cpp
server/: a.out  main_server.cpp  server.cpp  server.h  server_func.cpp
server/unix/: server.cpp  server.h
server/windows/: server.cpp  server_func.cpp
server_dir/: server.cpp  server.h  server_func.cpp
socket_windows/: client.cpp  client.h  client_function.cpp  server.cpp  server.h  server_function.cpp
